# Vision_Based_Inventory_Management

./: .env.example  .gitignore  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_CHECKLIST_PAN_TILT.md  DEPLOYMENT_PAN_TILT.md  DEPLOYMENT_SUMMARY.md  FINAL_RUN.md  FRONTEND_CONNECTION.md  HARDWARE_CONNECTIONS.md  PAN_TILT_QUICK_REF.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  UBUNTU_SETUP.md  raspPi5setup.md  requirements.txt  run.py  test_pantil_t.py
Vision_Based_Inventory_Management/: check.py  requirements.txt  run.py
Vision_Based_Inventory_Management/config/: dataset.yaml
Vision_Based_Inventory_Management/runs/detect/models/rpc_real_labels/: args.yaml
Vision_Based_Inventory_Management/src/: full_preprocess.py  inference.py  train.py
frontend/: .env.example  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/inventory/config/: route.ts
frontend/app/api/inventory/count/: route.ts
frontend/app/api/inventory/current/: route.ts
frontend/app/api/inventory/export/: route.ts
frontend/app/api/inventory/history/: route.ts
frontend/components/: ContinualLearningPanel.tsx  ROSVideoStream.tsx  activity-log.tsx  app-sidebar.tsx  control-panel.tsx  dashboard-header.tsx  detection-overlay.tsx  detections-table.tsx  inventory-dashboard.tsx  realtime-chart.tsx  shelf-heatmap.tsx  stats-cards.tsx  system-info.tsx  video-feed.tsx  video-stream.tsx
frontend/hooks/: use-inventory-stream.ts
frontend/lib/: api-client.ts  mock-data.ts  types.ts
frontend_backup/frontend/: .env.local.example  BACKEND_API_SPEC.md  QUICK_START.md  SETUP.md  backend_example.py  config.ts
frontend_backup/frontend/app/: globals.css  layout.tsx  page.tsx
models/: class_names.json
ros2_inventory/: CMakeLists.txt  package.xml  setup.py
ros2_inventory/config/: params.yaml
ros2_inventory/launch/: inventory_system.launch.py
ros2_inventory/msg/: Detection.msg  DetectionArray.msg  InventoryCount.msg
ros2_inventory/ros2_inventory/: __init__.py  api_bridge_node.py  camera_node.py  detection_node.py  inventory_node.py  learning_node.py  new_detection_node.py  pan_tilt_controller.py
runs/detect/models/emergency_fast/: args.yaml  results.csv
runs/detect/models/retail_inventory_yolov8n/: args.yaml
runs/detect/models/retail_inventory_yolov8n_cpu/: args.yaml  results.csv
runs/detect/models/rpc_real_labels/: results.csv
runs/detect/models/rpc_with_names/: args.yaml  results.csv
src/: api.py  continual_learning.py  create_class.py  export_model.py  full_train.py  gui.py  inference.py  preprocess.py  test_cl.py  train_with_classes.py  utils.py
